fixing overflow

--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -1,13 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-   
-  
 }
-.nav{
+
+.nav {
     height: 15vh;
     width: 100%;
     background-color: #1d1d1d;
@@ -16,60 +15,67 @@
     justify-content: space-evenly;
     align-items: center;
 }
-.logO{
+
+.logO {
     width: 150px;
     height: 100px;
 }
-.nav-header{
+
+.nav-header {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 5px;
     transition: none;
-   
- 
+
+
 }
-.nav-links{
+
+.nav-links {
     color: white;
     list-style: none;
     padding: 5px;
     font-size: 20px;
     font-family: 'Poppins', sans-serif;
     letter-spacing: 1px;
-    
+
 }
-.menu{
+
+.menu {
     width: 45px;
     height: 40px;
-    border:2px solid white;
+    border: 2px solid white;
     display: flex;
     justify-content: space-evenly;
-    align-items: center; 
+    align-items: center;
     padding: 5px;
     opacity: 0.9;
- 
+
 }
-.burger{
+
+.burger {
     width: 25px;
-    border:1px solid white;
+    border: 1px solid white;
     border-radius: 30px;
     height: 3px;
     background: white;
 }
-.burger::before{
+
+.burger::before {
     content: '';
     width: 20px;
-    border:1px solid white;
+    border: 1px solid white;
     position: absolute;
     margin-top: -10px;
     height: 2px;
     background: white;
     border-radius: 30px;
 }
-.burger::after{
+
+.burger::after {
     content: '';
     width: 20px;
-    border:1px solid white;
+    border: 1px solid white;
     position: absolute;
     margin-top: 8px;
     height: 2px;
@@ -79,19 +85,18 @@
 
 @media (min-width:320px) {
     body{
-        overflow-x: hidden!important;
+        overflow-x: hidden;
     }
-    .nav{
+    .nav {
         justify-content: space-between;
         padding: 20px;
     }
-    .logo{
 
-    }
-    .menu{
-        
-    }
-    .nav-header{
+    .logo {}
+
+    .menu {}
+
+    .nav-header {
         display: block;
         position: absolute;
         right: 0;
@@ -104,23 +109,29 @@
         text-align: center;
         transform: translateX(100%);
         transition: all ease-in-out 0.5s;
+       
     }
-    .nav-links{
+
+    .nav-links {
         margin-top: 20px;
         position: relative;
         top: 30%;
         font-size: 12pt;
     }
-    .nav-active{
-        transform:translateX(0)
+
+    .nav-active {
+        transform: translateX(0)
     }
-    
+
 }
-@media(min-width:1100px){
-   .nav{
-       justify-content: space-evenly;
-   }
-    .nav-header{
+
+@media(min-width:1100px) {
+    
+    .nav {
+        justify-content: space-evenly;
+    }
+
+    .nav-header {
         display: flex;
         position: relative;
         top: 0;
@@ -131,12 +142,15 @@
         justify-content: center;
         align-items: center;
         transform: translateX(0);
-        
+
+
     }
-    .menu{
+
+    .menu {
         display: none;
     }
-    .nav-links{
+
+    .nav-links {
         margin-top: 0;
         position: relative;
         top: 0;
